<resources>
    <string name="app_name">Salonna</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Name</string>
    <string name="product_name_hint">Enter Product Name</string>
    <string name="product_brand_hint">Enter Product Brand</string>
    <string name="product_price_hint">Enter Product Price</string>
    <string name="product_brand">Brand</string>
    <string name="product_price">Price</string>
    <string name="product_image">Image</string>
    <string name="product_add_image_btn">Add Image</string>
    <string name="product_add_btn">Add Product</string>
    <string name="product_edit">Edit Product</string>
    <string name="product_edit_btn">Edit Product</string>
    <string name="product_edit_name_hint">Edit Product Name</string>
    <string name="product_edit_brand_hint">Edit Product Brand</string>
    <string name="product_edit_price_hint">Edit Product Price</string>
    <string name="product_edit_image_hint">Edit Product Image</string>
    <string name="product_add_btn_1">Add Product</string>
    <string name="natures_secrets">Natures Secrets</string>
    <string name="dirtProtection">Dirt Protection Cream</string>
    <string name="biotique">BioTique</string>
    <string name="day_cream">Day Cream</string>
    <string name="night_cream">Night Cream</string>
    <string name="face_cream">Face Cream</string>
    <string name="fairandlovely_cream">Fair and Lovely</string>
    <string name="edit_btn1">Edit Product</string>
    <string name="delete_btn1">Delete Product</string>
    <string name="user_category">Select User Category</string>
    <string name="product_category">Select Product Category</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_babies">Babies and Kids</string>
    <string name="hair">Hair</string>
    <string name="body">Body</string>
    <string name="category">Category</string>
    <string name="shampoo">Shampoo</string>
    <string name="lotionandcream">Lotion and Cream</string>
    <string name="babyoil">Baby Oil</string>
    <string name="clear">Clear</string>
    <string name="rs.300">Rs.300</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="buynow">Buy Now</string>
    <string name="totalprice">Total Price = </string>
    <string name="makepayment">Make Payment</string>
    <string name="payment">Payment</string>
    <string name="payment_price">LKR 2500</string>
    <string name="card_name">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expirydate">Expiry Date</string>
    <string name="securityCode">Security Code</string>
    <string name="pay">Pay</string>
    <string name="username_account">Jason Statham</string>
    <string name="Home">Home</string>
    <string name="products">Products</string>
    <string name="dressing">Dressing</string>
    <string name="treatment">Treatment</string>
    <string name="signout">Sign Out</string>
    <string name="garnier">Garnier</string>
    <string name="passionfacewash">Passion Face Wash</string>
    <string name="nivea">Nivea</string>
    <string name="shavingCream">Shaving Cream</string>
    <string name="faceWash">Face Wash</string>
    <string name="cart">Cart</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_here">Login Here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="signinFacebook">Sign in with Facebook</string>
    <string name="Salonna">Salonna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_baby_and_kids">Baby and Kids Products</string>
    <string name="admin_male_products">Male Products</string>
    <string name="admin_female_products">Female Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="baby_hair">Baby Hair</string>
    <string name="baby_wash">Baby Wash</string>
    <string name="baby_cream">Baby Cream</string>
    <string name="admin_baby_hair_price_sect_1">Rs. 200</string>
    <string name="admin_baby_hair_price_sect_2">Rs.300</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
</resources>