<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyCart">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">
        <TextView
            android:id="@+id/totalprice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/totalprice"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@android:color/holo_orange_light"
            android:textAlignment="center"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cart_layout"
        />

    <RelativeLayout
        android:id="@+id/cart_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_orange_light">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cart"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="30dp"
            android:textAlignment="center"/>


    </RelativeLayout>



    <Button
        android:id="@+id/addProduct_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_product" />

    <Button
        android:layout_width="200dp"
        android:layout_marginLeft="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/back" />



</RelativeLayout>