<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="190dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="10dp"
    tools:context=".Admin_Female_Body_Products_View"
    android:layout_marginTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light">

        <TextView
            android:id="@+id/female_body_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dirtProtection"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/female_body_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/garnier"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/female_body_price"
            android:text="200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="80dp"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_edit_female_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_dark"
            android:textColor="@android:color/white"
            android:text="@string/edit_btn1"
            android:onClick="ButtonClickAddFemaleBody"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete_female_body"
            android:layout_width="match_parent"
            android:background="@android:color/holo_orange_dark"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:layout_marginBottom="10dp"
            android:text="@string/delete_btn1"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>